src/objects/location__c.object
<CustomObject>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <picklist>
            <controllingField>state__c</controllingField>
            <picklistValues>
                <fullName>banglor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kadapa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>markapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vijayawada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>londen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sidney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jamika</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pedth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>melborn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <picklist>
            <picklistValues>
                <fullName>austalia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>england</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>india</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>westindis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>location_map__c</fullName>
        <label>location map</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>postalcode__c</fullName>
        <label>postalcode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <picklist>
            <controllingField>country__c</controllingField>
            <picklistValues>
                <fullName>andrapradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>maharastra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tamilnadu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>austate1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>austate2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>engstate1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>engstate2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>wstindstate1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>wstindstate2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>street_address__c</fullName>
        <label>street address</label>
        <type>TextArea</type>
    </fields>
    <label>location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>